samples/_failures_safe/1761298270_024823_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_463601a8.c: In function ‘main’:
./samples/SAFE/__tmp_463601a8.c:155:5: error: ‘graph’ undeclared (first use in this function); did you mean ‘Graph’?
  155 |     graph
      |     ^~~~~
      |     Graph
./samples/SAFE/__tmp_463601a8.c:155:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_463601a8.c:155:10: error: expected ‘;’ at end of input
  155 |     graph
      |          ^
      |          ;
./samples/SAFE/__tmp_463601a8.c:155:5: error: expected declaration or statement at end of input
  155 |     graph
      |     ^~~~~
